--- a/alembic.ini
+++ b/alembic.ini
@@ -84,7 +84,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = postgresql://postgres:147258@postgres:5432/dockerdb
+sqlalchemy.url = postgresql+psycopg2://postgres:147258@localhost:5432/postgres
 
 
 
