--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "pydantic (>=2.12.5,<3.0.0)",
     "pydantic-settings (>=2.12.0,<3.0.0)",
     "sqlalchemy (>=2.0.45,<3.0.0)",
-    "psycopg2",
+    "psycopg2 (>=2.9.9,<2.9.12)",
     "asyncpg (>=0.31.0,<0.32.0)",
     "ujson (>=5.11.0,<6.0.0)",
     "fastapi (>=0.124.4,<0.125.0)",
